# nv-video-codec-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
demux-file/: Cargo.toml
demux-file/src/: main.rs
nv-video-codec/: Cargo.toml  clippy.toml
nv-video-codec-rs/: Cargo.toml
nv-video-codec-rs/src/nvdecoder/: error.rs
nv-video-codec-rs/src/nvencoder/: defaults.rs
nv-video-codec-sys/: Cargo.toml  README.md  build.rs  wrapper.cpp  wrapper.h
nv-video-codec-sys/Video_Codec_SDK_11.0.10/Samples/: CMakeLists.txt
nv-video-codec-sys/Video_Codec_SDK_11.0.10/Samples/NvCodec/: CMakeLists.txt
nv-video-codec-sys/Video_Codec_SDK_11.0.10/Samples/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
nv-video-codec-sys/Video_Codec_SDK_11.0.10/Samples/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h
nv-video-codec-sys/src/: guids.rs  lib.rs
nv-video-codec/resources/test/: decode_out_grayscale.nv12  single_p_frame_3k.hevc
nv-video-codec/src/: guids.rs  lib.rs
nv-video-codec/src/common/: cuda_result.rs  macros.rs  mod.rs
nv-video-codec/src/decoder/: builder.rs  decoding_output.rs  flags.rs  frame.rs  frame_info.rs  mod.rs  nvdecoder.rs  types.rs  util.rs
nv-video-codec/src/decoder/frame/: device.rs  host.rs  info.rs
nv-video-codec/src/encoder/: builder.rs  defaults.rs  error.rs  experimental_fwrapper.rs  mod.rs  nvencoder.rs  nvencoderbase.rs  nvencodercuda.rs  nvencodergl.rs  resource_manager.rs  traits.rs  types.rs
nv-video-codec/src/nvdecoder/: builder.rs  decoder.rs  frame.rs  mod.rs  nvdecoder.rs
nv-video-codec/src/nvencoder/: builder.rs  nvencoderbase.rs  nvencodergl.rs  traits.rs  types.rs
nv-video-codec/tests/: cuda_encoder.rs  decoder.rs  encoder.rs  gl_encoder.rs  utils.rs
nvidia-sdk/: PKGBUILD
resources/test/: Big_Buck_Bunny_1080_10s_1MB_F1.H265  decode_out_color.nv12  single_i_frame_3k.hevc  single_i_frame_color.hevc  single_i_frame_grayscale.hevc
scripts/actions/: install_cuda_ubuntu.sh
src/: common.rs  lib.rs  nvdecoder.rs
src/common/: cuda_result.rs  cuda_video_chroma_format.rs  cuda_video_codec.rs  cuda_video_create_flags.rs  cuda_video_deinterlace_mode.rs  cuda_video_surface_format.rs  dim.rs  macros.rs  mod.rs  rect.rs  types.rs
src/decoder/: cuda_video_codec.rs  mod.rs  nvdecoder.rs
src/encoder/: mod.rs
src/nvdecoder/: builder.rs  flags.rs  frame.rs  mod.rs  nvdecoder.rs  videoformat.rs
src/nvencoder/: builder.rs  defaults.rs  error.rs  mod.rs  nvencoder.rs  nvencoderbase.rs  nvencodergl.rs  resource_manager.rs  traits.rs
tests/: decoder.rs  encoder.rs  utils.rs
