[package]
name = "nv-video-codec-rs"
version = "0.1.0"
authors = ["Edward Yang <edward.yang6771@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nv-video-codec-sys = { path = "nv-video-codec-sys" }
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"