[package]
name = "nv-video-codec-sys"
version = "0.1.0"
authors = ["Edward Yang <edward.yang6771@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.58"
cc = "1.0"
cxx-build = "1.0"

[dependencies]
cxx = "1.0"