[package]
name = "nv-video-codec-sys"
description = "Raw FFI bindings to Nvidia Video Codec SDK"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[build-dependencies]
bindgen = "0.72"
cc = "1.0"